Nuget package uploaded

--- a/Albatross.Expression.nuspec
+++ b/Albatross.Expression.nuspec
@@ -6,8 +6,8 @@
 		<title>Albatross Expression Parser Evaluator</title>
 		<authors>Rushui Guan</authors>
 		<owners>Rushui Guan</owners>
-		<licenseUrl>https://github.com/RushuiGuan/Albatross/blob/master/License.md</licenseUrl>
-		<projectUrl>https://github.com/RushuiGuan/Albatross/tree/master/Albatross.Expression</projectUrl>
+		<licenseUrl>https://github.com/RushuiGuan/expression/blob/master/License.md</licenseUrl>
+		<projectUrl>https://github.com/RushuiGuan/expression</projectUrl>
 		<requireLicenseAcceptance>false</requireLicenseAcceptance>
 		<summary>A single statement expression parser.</summary>
 		<description>It handles common prefix, infix operations, custom operations and external variables.  The utility class ExecutionContext can be used to create and eval multiple expressions with dependencies among each other.  It has a built in Compile function that can detect circular reference among the expressions.</description>
