--- a/Albatross.Expression/Albatross.Expression.csproj
+++ b/Albatross.Expression/Albatross.Expression.csproj
@@ -72,6 +72,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ContextValue.cs" />
+    <Compile Include="ExpressionBuilder.cs" />
     <Compile Include="IExecutionContext.cs" />
     <Compile Include="Exceptions\CircularReferenceException.cs" />
     <Compile Include="Exceptions\OperandException.cs" />
