--- a/Albatross.Expression.Test/packages.config
+++ b/Albatross.Expression.Test/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="NUnit" version="3.5.0" targetFramework="net461" />
+  <package id="NUnit" version="3.7.1" targetFramework="net461" />
+  <package id="SimpleInjector" version="4.0.8" targetFramework="net461" />
 </packages>
