--- a/docfx_project/toc.yml
+++ b/docfx_project/toc.yml
@@ -4,6 +4,6 @@
 - name: Api Documentation
   href: api/
   homepage: api/index.md
-  name: Source Code
+- name: Source Code
   href: https://github.com/rushuiguan/expression
 
