--- a/src/Albatross.Expression.Test/Albatross.Expression.Test.csproj
+++ b/src/Albatross.Expression.Test/Albatross.Expression.Test.csproj
@@ -1,7 +1,8 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFrameworks>netcoreapp2.0;net462</TargetFrameworks>
+		<TargetFrameworks>netcoreapp2.0</TargetFrameworks>
+		<AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
 	</PropertyGroup>
 
 	<ItemGroup>
