--- a/src/Albatross.Expression/Albatross.Expression.csproj
+++ b/src/Albatross.Expression/Albatross.Expression.csproj
@@ -1,11 +1,11 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<?xml version="1.0" encoding="utf-8"?>
+<Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
 		<TargetFramework>netstandard2.1</TargetFramework>
 		<PackageLicenseFile>LICENSE</PackageLicenseFile>
 		<Title>Albatross Expression Api</Title>
 		<Description>Albatross.Expression api is created to process and evaluate text based expression strings.  The api tokenizes the expression text and create a tree model from the tokens.  Using the model, it can evaluate the expression or convert it to a expression of different format.  Some applications revert the process by creating the model first and using it to generate certain expression such as a sql query statement.  The api also contains a useful ExecutionContext class that allows evaluation of expressions with variables.  The variables can be read internally or directly from external objects.</Description>
 		<Authors>Rushui Guan</Authors>
-		<Version>4.0.0</Version>
 		<Nullable>enable</Nullable>
 		<PackageProjectUrl>https://rushuiguan.github.io/expression/</PackageProjectUrl>
 		<PackageTags>csharp expression parser eval context</PackageTags>
@@ -21,8 +21,7 @@
 	<ItemGroup>
 		<None Include="LICENSE">
 			<Pack>True</Pack>
-			<PackagePath>
-			</PackagePath>
+			<PackagePath></PackagePath>
 		</None>
 		<None Update="icon.png">
 			<Pack>True</Pack>
