update readme for utility

--- a/Albatross.Expression.Utility/Albatross.Expression.Utility.csproj
+++ b/Albatross.Expression.Utility/Albatross.Expression.Utility.csproj
@@ -9,6 +9,7 @@
 		<ToolCommandName>ex</ToolCommandName>
 		<PackageIcon>icon.png</PackageIcon>
 		<PackageLicenseFile>LICENSE</PackageLicenseFile>
+		<PackageReadmeFile>README.md</PackageReadmeFile>
 	</PropertyGroup>
 	<ItemGroup>
 		<None Include="..\icon.png">
@@ -30,5 +31,11 @@
 	</ItemGroup>
 	<ItemGroup>
 		<ProjectReference Include="..\Albatross.Expression\Albatross.Expression.csproj" />
+	</ItemGroup>
+	<ItemGroup>
+	  <None Update="README.md">
+	    <Pack>True</Pack>
+	    <PackagePath>\</PackagePath>
+	  </None>
 	</ItemGroup>
 </Project>
