update ai prompt for class doc

--- a/Albatross.Expression/Albatross.Expression.csproj
+++ b/Albatross.Expression/Albatross.Expression.csproj
@@ -4,6 +4,7 @@
 		<TargetFramework>net8.0</TargetFramework>
 		<Description>Albatross.Expression api is created to process and evaluate text based expression strings.  The api tokenizes the expression text and create a tree model from the tokens.  Using the model, it can evaluate the expression or convert it to a expression of different format.  Some applications revert the process by creating the model first and using it to generate certain expression such as a sql query statement.  The api also contains a useful ExecutionContext class that allows evaluation of expressions with variables.  The variables can be read internally or directly from external objects.</Description>
 		<PackageTags>expression parser eval context</PackageTags>
+		<GenerateDocumentationFile>true</GenerateDocumentationFile>
 		<Nullable>enable</Nullable>
 	</PropertyGroup>
 	<ItemGroup>
