--- a/Albatross.Expression.Utility/Albatross.Expression.Utility.csproj
+++ b/Albatross.Expression.Utility/Albatross.Expression.Utility.csproj
@@ -7,6 +7,7 @@
 		<PackageId>Albatross.Expression.Utility</PackageId>
 		<PackAsTool>True</PackAsTool>
 		<ToolCommandName>ex</ToolCommandName>
+		<GenerateDocumentationFile>true</GenerateDocumentationFile>
 	</PropertyGroup>
 	<ItemGroup>
 		<None Include="..\icon.png">
